# nodice

./: .pre-commit-config.yaml  Cargo.toml  LICENSE  README.md  clippy.toml
benches/: distribution.rs
src/: error.rs  expr.rs  lib.rs  main.rs  parser.rs  stats.rs
src/expr/: arbitrary.rs  binop.rs  die.rs  display.rs  error.rs  expr.rs  inner.rs  modifier.rs  parser.rs  scalar.rs  simplify.rs
