[package]
name = "nodice"
version = "0.1.0"
edition = "2024"
authors = ["Wolf Honoré <wolfhonore@gmail.com>"]
license = "MIT"
readme = "README.md"
description = "A dice roller and calculator"
repository = "https://github.com/whonore/nodice"
keywords = ["dice"]
categories = ["command-line-utilities"]

[[bench]]
name = "distribution"
harness = false

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["display", "from"] }
itertools = "0.15.0"
nom = "8.0.0"
nom-language = "0.1.0"
rand = "0.10.2"
thiserror = "2.0.18"

[dev-dependencies]
approx = "0.5.1"
criterion = "0.8.2"
proptest = "1.11.0"
proptest-derive = "0.8.0"

[lints.clippy]
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

doc-markdown = "allow"
missing-errors-doc = "allow"
module-inception = "allow"
must-use-candidate = "allow"
return-self-not-must-use = "allow"
similar-names = "allow"
too-many-lines = "allow"

allow-attributes = "warn"
dbg-macro = "warn"
expect-used = "warn"
if-then-some-else-none = "warn"
indexing-slicing = "warn"
mod-module-files = "warn"
needless-raw-strings = "warn"
panic = "warn"
redundant-test-prefix = "warn"
todo = "warn"
unimplemented = "warn"
unnecessary-self-imports = "warn"
unreachable = "warn"
unwrap-used = "warn"
